# hackathon-bi-2025

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose-dev.yml  docker-compose-production.yml  docker-compose.yml
.cursor/rules/: prd.mdc
.github/workflows/: ci.yml  docker-deploy.yml
.sqlx/: query-1cfdb74d1be6d24f997b0d6f28ca642d6a0c11accbbce6b525d2afd8a9287513.json  query-340017649db8e4b78a497cdc2913b3291f7080d1ef8ea68689e4a1032ddba17d.json  query-393c2a2c1af4cbe28b81abd964f18faf907cad161c3c39215f9b5a1ac7fd2cd1.json  query-4e7ee50625bb101ac230b3edfafc422bf828ea7edced946b31fa8a0422751c68.json  query-69705664f592442baa52f7e022c93450c7bf6b2e701eab4ebcd4ce30323fb1c6.json
migrations/: 20250614044311_create_submission_table.sql
src/: main.rs  utils.rs
src/commons/: minio_service.rs
src/controllers/: auth.rs
src/models/: user.rs
src/repositories/: user_repository.rs
src/services/: auth_service.rs  face_match_service.rs  metrics_service.rs  mod.rs
src/submissions/: mod.rs  submission_controller.rs  submission_repository.rs  submission_service.rs
src/submissions/dto/: presigned_urls_response.rs
src/workers/: config.rs  distributed_lock.rs  dlq_worker.rs  error.rs  job.rs  main_worker.rs  metrics.rs  mod.rs  queue.rs  upload_worker.rs
